--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "npm-run-all": "^4.1.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.15"
+    "react-scripts": "1.0.15",
+    "react-scroll-parallax": "^1.1.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
