--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "pure-react-carousel": "^1.9.9",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.15"
+    "react-scripts": "1.0.15",
+    "typed.js": "^2.0.6"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
